patching some reflection errors caused by access violations